# compmicro-ndutils-env

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.MD  Dockerfile  LICENSE  Makefile  README.md  environment.yml  meta.yaml  ndutils_requirements.txt  pyproject.toml  requirements.in  requirements.txt
.github/reusable/build_and_push_artifacts/: action.yml
.github/reusable/build_and_push_docker/: action.yml
.github/reusable/docker_build_and_push/: action.yml
.github/reusable/install_and_test/: action.yml
.github/reusable/setup/: action.yml
.github/workflows/: _setup.yml  build.yml  docker-build-test-and-push.yml  docker-build.yml  push.yml  release.yml  test-conda-install.yml  test-pip-install.yml  test.yml
ndutils/: __init__.py  test.py
ndutils_env/: __init__.py
